react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  replicas: 2  # 복제본 수
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react-container
          image: hyun145/sesac-diary-frontend:v1.2  # Docker Hub 이미지 경로
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  # --- 아래 annotations 블록을 추가합니다 ---
  annotations:
    # 로드밸런서의 종류를 Network Load Balancer(NLB)로 명시
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # 로드밸런서의 통신 대상을 인터넷(public)으로 명시
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
